--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "bootstrap": "^5.2.3",
+        "d3": "^7.8.4",
         "d3-graph-controller": "^2.5.2",
+        "d3-selection": "^3.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@types/d3": "^7.4.0",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
         "@typescript-eslint/eslint-plugin": "^5.57.1",
