--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "d3": "^6.6.1",
         "ml-matrix": "^6.7.0",
         "nuxt": "^2.15.3",
-        "nuxt-custom-elements": "^1.9.2"
+        "nuxt-custom-elements": "^1.9.2",
+        "svg-path-reverse": "^1.7.0"
     },
     "devDependencies": {
         "@nuxt/types": "^2.15.3",
