--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "graph-editor",
-    "version": "1.7.1",
+    "version": "2.0",
     "private": true,
     "scripts": {
         "dev": "nuxt",
@@ -44,5 +44,10 @@
         "stylelint": "^13.12.0",
         "stylelint-config-prettier": "^8.0.2",
         "stylelint-config-standard": "^21.0.0"
+    },
+    "overrides": {
+        "webpack@4.47.0": {
+            "terser-webpack-plugin": "^4.2.3"
+        }
     }
 }
