--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,26 @@
 {
-  "compilerOptions": {
-    "target": "ES2018",
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "lib": ["ESNext", "ESNext.AsyncIterable", "DOM"],
-    "esModuleInterop": true,
-    "allowJs": true,
-    "sourceMap": true,
-    "strict": true,
-    "noEmit": true,
-    "experimentalDecorators": true,
-    "baseUrl": ".",
-    "paths": {
-      "~/*": ["./*"],
-      "@/*": ["./*"]
+    "compilerOptions": {
+        "target": "ES2018",
+        "module": "ESNext",
+        "moduleResolution": "Node",
+        "lib": ["ESNext", "ESNext.AsyncIterable", "DOM"],
+        "esModuleInterop": true,
+        "allowJs": true,
+        "sourceMap": true,
+        "strict": true,
+        "noEmit": true,
+        "experimentalDecorators": true,
+        "baseUrl": ".",
+        "paths": {
+            "~/*": ["./*"],
+            "@/*": ["./*"]
+        },
+        "types": [
+            "@nuxt/types",
+            "@nuxt/vue-app",
+            "@types/node",
+            "@nuxtjs/vuetify"
+        ]
     },
-    "types": ["@nuxt/types", "@types/node"]
-  },
-  "exclude": ["node_modules", ".nuxt", "dist"]
+    "exclude": ["node_modules", ".nuxt", "dist"]
 }
