--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "graph-component",
-  "version": "0.0.0",
+  "name": "graph-editor",
+  "version": "3.0.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -13,11 +13,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "d3": "^7.8.5",
+    "ml-matrix": "6.7",
+    "svg-path-reverse": "^1.7.0",
     "vue": "^3.4.15"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
+    "@types/d3": "^7.4.3",
     "@types/node": "^20.11.10",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/eslint-config-prettier": "^8.0.0",
@@ -27,7 +31,9 @@
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
-    "typescript": "~5.3.0",
+    "sass": "^1.71.1",
+    "scss": "^0.2.4",
+    "typescript": "^5.4.2",
     "vite": "^5.0.11",
     "vue-tsc": "^1.8.27"
   }
