--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "scss": "^0.2.4",
     "typescript": "^5.4.2",
     "vite": "^5.0.11",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "vue3-webcomponent-wrapper": "^0.2.0"
   }
 }
