--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^3.4.15"
   },
   "devDependencies": {
+    "@mdi/js": "^7.4.47",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/d3": "^7.4.3",
@@ -36,6 +37,7 @@
     "scss": "^0.2.4",
     "typescript": "^5.4.2",
     "vite": "^5.0.11",
+    "vite-plugin-vuetify": "^2.0.3",
     "vue-tsc": "^1.8.27",
     "vue3-webcomponent-wrapper": "^0.2.0"
   }
