--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "bowser": "^2.11.0",
     "d3": "^7.8.5",
     "html-parsed-element": "^0.4.1",
     "ml-matrix": "6.7",
