--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "test-ct": "playwright test -c playwright-ct.config.ts",
+    "test-ct:update-snapshots": "playwright test --update-snapshots -c playwright-ct.config.ts"
   },
   "dependencies": {
     "bowser": "^2.11.0",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@mdi/js": "^7.4.47",
+    "@playwright/experimental-ct-vue": "^1.54.1",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.6",
     "@types/d3": "^7.4.3",
