--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "test": "vitest"
   },
   "dependencies": {
     "bowser": "^2.11.0",
@@ -39,6 +40,7 @@
     "scss": "^0.2.4",
     "typescript": "^5.4.2",
     "vite": "^5.0.11",
+    "vitest": "^3.2.4",
     "vue-tsc": "^1.8.27",
     "vue3-webcomponent-wrapper": "^0.2.0"
   }
