--- a/package.json
+++ b/package.json
@@ -1,48 +1,51 @@
 {
-  "name": "graph-component",
-  "version": "3.2.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/",
-    "test-ct": "playwright test -c playwright-ct.config.ts",
-    "test-ct:update-snapshots": "playwright test --update-snapshots -c playwright-ct.config.ts"
-  },
-  "dependencies": {
-    "bowser": "^2.11.0",
-    "d3": "^7.8.5",
-    "d3-bboxCollide": "^1.0.4",
-    "html-parsed-element": "^0.4.1",
-    "ml-matrix": "6.7",
-    "svg-path-reverse": "^1.7.0",
-    "vue": "^3.5.17"
-  },
-  "devDependencies": {
-    "@mdi/js": "^7.4.47",
-    "@playwright/experimental-ct-vue": "^1.54.1",
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@tsconfig/node20": "^20.1.6",
-    "@types/d3": "^7.4.3",
-    "@types/node": "^20.19.8",
-    "@vitejs/plugin-vue": "^6.0.0",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/tsconfig": "^0.7.0",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "npm-run-all2": "^6.1.1",
-    "prettier": "^3.0.3",
-    "sass": "^1.71.1",
-    "scss": "^0.2.4",
-    "typescript": "^5.8.3",
-    "vite": "^7.0.4",
-    "vue-tsc": "^3.0.1",
-    "vue3-webcomponent-wrapper": "^0.2.0"
-  }
+    "name": "graph-component",
+    "version": "3.2.0",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "run-p type-check \"build-only-*\" --",
+        "preview": "vite preview",
+        "build-only": "vite build",
+        "build-only-ce": "vite build --mode ce",
+        "build-only-lib": "vite build --mode lib",
+        "build-types": "vue-tsc --declaration --emitDeclarationOnly --outDir dist/types",
+        "type-check": "vue-tsc --build --force",
+        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+        "format": "prettier --write src/",
+        "test-ct": "playwright test -c playwright-ct.config.ts",
+        "test-ct:update-snapshots": "playwright test --update-snapshots -c playwright-ct.config.ts"
+    },
+    "dependencies": {
+        "bowser": "^2.11.0",
+        "d3": "^7.8.5",
+        "d3-bboxCollide": "^1.0.4",
+        "html-parsed-element": "^0.4.1",
+        "ml-matrix": "6.7",
+        "svg-path-reverse": "^1.7.0",
+        "vue": "^3.5.17"
+    },
+    "devDependencies": {
+        "@mdi/js": "^7.4.47",
+        "@playwright/experimental-ct-vue": "^1.54.1",
+        "@rushstack/eslint-patch": "^1.3.3",
+        "@tsconfig/node20": "^20.1.6",
+        "@types/d3": "^7.4.3",
+        "@types/node": "^20.19.8",
+        "@vitejs/plugin-vue": "^6.0.0",
+        "@vue/eslint-config-prettier": "^8.0.0",
+        "@vue/eslint-config-typescript": "^12.0.0",
+        "@vue/tsconfig": "^0.7.0",
+        "eslint": "^8.49.0",
+        "eslint-plugin-vue": "^9.17.0",
+        "npm-run-all2": "^6.1.1",
+        "prettier": "^3.0.3",
+        "sass": "^1.71.1",
+        "scss": "^0.2.4",
+        "typescript": "^5.8.3",
+        "vite": "^7.0.4",
+        "vue-tsc": "^3.0.1",
+        "vue3-webcomponent-wrapper": "^0.2.0"
+    }
 }
