--- a/package.json
+++ b/package.json
@@ -17,35 +17,35 @@
         "test-ct:update-snapshots": "playwright test --update-snapshots -c playwright-ct.config.ts"
     },
     "dependencies": {
-        "bowser": "^2.11.0",
-        "d3": "^7.8.5",
+        "bowser": "^2.12.1",
+        "d3": "^7.9.0",
         "d3-bboxCollide": "^1.0.4",
         "html-parsed-element": "^0.4.1",
-        "ml-matrix": "6.7",
+        "ml-matrix": "6.12",
         "svg-path-reverse": "^1.7.0",
-        "vue": "^3.5.17"
+        "vue": "^3.5.24"
     },
     "devDependencies": {
         "@mdi/js": "^7.4.47",
-        "@playwright/experimental-ct-vue": "^1.54.1",
-        "@rushstack/eslint-patch": "^1.3.3",
-        "@tsconfig/node20": "^20.1.6",
+        "@playwright/experimental-ct-vue": "^1.56.1",
+        "@rushstack/eslint-patch": "^1.15.0",
+        "@tsconfig/node20": "^20.1.8",
         "@types/d3": "^7.4.3",
-        "@types/node": "^20.19.8",
-        "@vitejs/plugin-vue": "^6.0.0",
-        "@vue/eslint-config-prettier": "^8.0.0",
-        "@vue/eslint-config-typescript": "^12.0.0",
-        "@vue/tsconfig": "^0.7.0",
-        "eslint": "^8.49.0",
-        "eslint-plugin-vue": "^9.17.0",
-        "npm-run-all2": "^6.1.1",
-        "prettier": "^3.0.3",
-        "sass": "^1.71.1",
+        "@types/node": "^24.10.1",
+        "@vitejs/plugin-vue": "^6.0.2",
+        "@vue/eslint-config-prettier": "^10.2.0",
+        "@vue/eslint-config-typescript": "^14.6.0",
+        "@vue/tsconfig": "^0.8.1",
+        "eslint": "^9.39.1",
+        "eslint-plugin-vue": "^10.5.1",
+        "npm-run-all2": "^8.0.4",
+        "prettier": "^3.6.2",
+        "sass": "^1.94.1",
         "scss": "^0.2.4",
-        "typescript": "^5.8.3",
-        "vite": "^7.0.4",
+        "typescript": "^5.9.3",
+        "vite": "7.2.2",
         "vite-plugin-dts": "^4.5.4",
-        "vue-tsc": "^3.0.1",
+        "vue-tsc": "^3.1.4",
         "vue3-webcomponent-wrapper": "^0.2.0"
     }
 }
