--- a/application-examples/vue-component/package.json
+++ b/application-examples/vue-component/package.json
@@ -9,6 +9,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@aig-hagen/graph-component": "^3.5.0",
         "vue": "^3.5.24"
     },
     "devDependencies": {
