--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "./lib": {
             "import": "./dist/lib/graph-component.js",
             "types": "./dist/lib/index.d.ts"
-        }
+        },
+        "./lib/*": "./dist/lib/*"
     },
     "homepage": "https://github.com/aig-hagen/aig_graph_component#readme",
     "repository": {
